--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+        <title>Cat Counter</title>
     </head>
     <body>
         <div class="container">
